style application layout

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Welcome</h1>
-<ul id="lesson" class="nav nav-tabs">
-  <li class="active"><a href="#">Text</a></li>
-  <li><a href="#">Video</a></li>
+<ul class="menu nav nav-tabs">
+  <li class="active" data-toggle="tab"><a href="#">Text</a></li>
+  <li><a href="#" data-toggle="tab">Cheat sheet</a></li>
 </ul>
+<div id="lesson">
+</div>
 	
 
