--- a/app/assets/stylesheets/custom-style.css
+++ b/app/assets/stylesheets/custom-style.css
@@ -1,3 +1,7 @@
+h1 {
+	margin-bottom: .70em;
+	color: #555555;
+}
 .navbar .nav>li>a {
 	padding: 13px 15px 6px 15px;
 	font-family: "Josefin Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -8,9 +12,9 @@
 .nav>li>a {
 	display:inline;
 }
-/*li {
+li {
 	line-height: 20px;
-}*/
+}
 .nav {
 	list-style: none;
 }
@@ -19,8 +23,9 @@
 }
 #lesson {
 	height: 400px;
-	border-left: 1px solid #C3C3C3;
-	border-right: 1px solid #C3C3C3;
+	border-left: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
 }
 .footer {
 	margin: 10px auto;
@@ -31,7 +36,10 @@
 }
 #foot {
 	height: 50px;
-	border-top: 1px solid #C3C3C3;
+	border-top: 1px solid #DDDDDD;
 	padding-top: 10px;
 	font-size: 12px;
+}
+.menu li {
+	margin-bottom: 8px;
 }
