redo last commit because of errors

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome</h1>
+g<h1>Welcome</h1>
 <ul class="menu nav nav-tabs">
   <li class="active" data-toggle="tab"><a href="#">Text</a></li>
   <li><a href="#" data-toggle="tab">Something else</a></li>
