--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,13 +1,6 @@
-g<h1>Welcome</h1>
-<ul class="menu nav nav-tabs">
-  <li class="active" data-toggle="tab"><a href="#">Text</a></li>
-  <li><a href="#" data-toggle="tab">Something else</a></li>
+<h1>Table of contents</h1>
+<ul class="table_of_contents">
+	<% @lessons.each do |lesson| %>
+		<li><a href="/lessons/<%= lesson.id %>"><%= lesson.name %></a></li>
+	<% end %>
 </ul>
-<div id="lesson">
-	<div class="tab-content" id="my-tab">
-		  <div class="tab-pane fade in active" id="text">
-		  	Welcome to this Epicodus clone.  I just began it a few hours ago so it is a work in progress.  So far I;ve created the database and got the layout styled. I am currently working on getting CRUD done for the lesson class.
-		</div>  
-	</div>
-</div>
-	
